# cute-emojis

./: .gitignore  .js  auto.js  emojis.js  emojis.json  emojis.txt  index.html  sort.html  sort.js  sort2.html  worker.js
emojis/: boba
sortimage/: Cargo.toml
sortimage/src/: lib.rs
